# opengl-demo

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  run.sh
.ccls-cache/@@home@ben@dev@code@C++@opengl/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@SDL2@SDL.h.blob  @usr@include@SDL2@SDL_assert.h.blob  @usr@include@SDL2@SDL_atomic.h.blob  @usr@include@SDL2@SDL_audio.h.blob  @usr@include@SDL2@SDL_blendmode.h.blob  @usr@include@SDL2@SDL_clipboard.h.blob  @usr@include@SDL2@SDL_config.h.blob  @usr@include@SDL2@SDL_cpuinfo.h.blob  @usr@include@SDL2@SDL_endian.h.blob  @usr@include@SDL2@SDL_error.h.blob  @usr@include@SDL2@SDL_events.h.blob  @usr@include@SDL2@SDL_filesystem.h.blob  @usr@include@SDL2@SDL_gamecontroller.h.blob  @usr@include@SDL2@SDL_gesture.h.blob  @usr@include@SDL2@SDL_guid.h.blob  @usr@include@SDL2@SDL_haptic.h.blob  @usr@include@SDL2@SDL_hidapi.h.blob  @usr@include@SDL2@SDL_hints.h.blob  @usr@include@SDL2@SDL_joystick.h.blob  @usr@include@SDL2@SDL_keyboard.h.blob  @usr@include@SDL2@SDL_keycode.h.blob  @usr@include@SDL2@SDL_loadso.h.blob  @usr@include@SDL2@SDL_locale.h.blob  @usr@include@SDL2@SDL_log.h.blob  @usr@include@SDL2@SDL_main.h.blob  @usr@include@SDL2@SDL_messagebox.h.blob  @usr@include@SDL2@SDL_metal.h.blob  @usr@include@SDL2@SDL_misc.h.blob  @usr@include@SDL2@SDL_mouse.h.blob  @usr@include@SDL2@SDL_mutex.h.blob  @usr@include@SDL2@SDL_pixels.h.blob  @usr@include@SDL2@SDL_platform.h.blob  @usr@include@SDL2@SDL_power.h.blob  (+437 more)
src/: CMakeLists.txt  main.cpp
src/window/: CMakeLists.txt
(+133 files in other folders)
